# opengl-learning

BlinkingTriangle/: CMakeLists.txt
BlinkingTriangle/src/: Shaders.h  VBO.h  main.cpp
Rect/: CMakeLists.txt
Rect/src/: Shaders.h  VBO.h  main.cpp
Triangle/: CMakeLists.txt
Triangle/src/: Shaders.h  VBO.h  main.cpp
TwoTriangles/: CMakeLists.txt
TwoTriangles/src/: Shaders.h  VBO.h  main.cpp
